# quote_bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
