[package]
name = "quote_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poise = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serenity = { version = "0.12.5", features = ["client", "gateway", "rustls_backend"] }
time = { version = "0.3.44", features = ["local-offset", "formatting"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
